src/exporter/snapshots/annatto__exporter__meta__tests__non_default.snap
---
source: src/exporter/meta.rs
expression: export.unwrap()
---
---- corpus.meta:
abbreviation=dipl
abbreviation=norm
comment=was late for elicitation
comment=was on time
l1=eng
l2=deu
languages-used=eng,eng
personal-anno-key-1=personal-anno-value-1
personal-anno-key-2=personal-anno-value-2
---- file.meta:
---- node.meta:
lemma=New York
pos=PRON

