src/exporter/snapshots/annatto__exporter__meta__tests__serialize.snap
---
source: src/exporter/meta.rs
expression: serialization.unwrap()
---
name_key = "annis::doc"
only = []
write_ns = false
