src/exporter/snapshots/annatto__exporter__meta__tests__serialize_custom.snap
---
source: src/exporter/meta.rs
expression: serialization.unwrap()
---
name_key = "default_ns::document"
only = ["default_ns::author", "default_ns::date"]
write_ns = true
