src/exporter/snapshots/annatto__exporter__meta__tests__with_ns.snap
---
source: src/exporter/meta.rs
expression: export.unwrap()
---
---- test_doc.meta:
dipl::abbreviation=dipl
dipl::comment=was late for elicitation
norm::abbreviation=norm
norm::comment=was on time
norm::l1=eng
norm::l2=deu
norm::languages-used=eng,eng
norm::personal-anno-key-1=personal-anno-value-1
norm::personal-anno-key-2=personal-anno-value-2

